--- a/settings.json
+++ b/settings.json
@@ -11,7 +11,7 @@
     "vim.normalModeKeyBindings": [
         {
             "before": ["z", "z"],
-            "after": [":w"]  
+            "commands": [":w"]  
         }
     ],
     "vim.handleKeys": {
